--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -314,12 +314,13 @@ footer h3,
 .mdc-typography--headline5,
 .mdc-typography--headline6,
 .mdc-typography--headline7,
-.mdc-typography--headline,
+.mdc-drawer__content-heading,
 .supplimentary-list-title {
   font-family: $heading-font-family, $base-font-family, Helvetica, Arial, sans-serif;
   font-weight: $heading-font-weight;
 }
 .mdc-drawer__content-heading,
+.mdc-typography--headline,
 .mdc-typography--headline1,
 .mdc-typography--headline2,
 .mdc-typography--headline3,
@@ -327,7 +328,7 @@ footer h3,
 .mdc-typography--headline5,
 .mdc-typography--headline6,
 .mdc-typography--headline7,
-.mdc-typography--headline {
+.mdc-drawer__content-heading {
   font-weight: $heading-medium-font-weight;
   a {
     font-weight: $heading-medium-font-weight;
@@ -526,7 +527,8 @@ footer h3,
   }
 }
 
-.goodmoves-shortlist {
+.goodmoves-shortlist,
+.goodmoves-notes {
   .mdc-layout-grid {
     .mdc-select {
       margin-bottom: $unit;
