--- a/sites/configurations/fundingscotland/templates/funds/fund.hbs
+++ b/sites/configurations/fundingscotland/templates/funds/fund.hbs
@@ -11,7 +11,7 @@
           <div class="mdc-typography--headline5 v-margin-full">
             Similar funds
           </div>
-          <div class="mdc-layout-grid">
+          <div class="mdc-layout-grid equal-height">
             <div class="mdc-layout-grid__inner">
               {{#each data.supplimentaryResponses.related.hits.hits ~}}
               <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
