--- a/sites/configurations/fundingscotland/partials/fund-search-results.hbs
+++ b/sites/configurations/fundingscotland/partials/fund-search-results.hbs
@@ -238,14 +238,14 @@
     <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
       {{#compare @root.data.search_data.detailed_results.hits.total ">" 0 ~}}
       <form action="{{{@root.request.url.path}}}" method="GET">
-        {{#each (split "activities,beneficiaries,geographical_areas_funded" ",")}}
+        {{#each (split "activities,beneficiaries,geographical_areas_funded,fund_status,charities_only,type_of_cost,type_of_funding" ",")}}
           {{#if (getProperty @root.request.params.query this) ~}}
             {{#each (arrayify (getProperty @root.request.params.query this)) ~}}
               <input type="hidden" name="{{../this}}[]" value="{{this}}" />
             {{/each ~}}
           {{/if ~}}
         {{/each ~}}
-        {{#each (split "keywords,fund_status,charities_only,type_of_cost,type_of_funding" ",")}}
+        {{#each (split "keywords,sort" ",")}}
           {{#if (getProperty @root.request.params.query this) ~}}
             <input type="hidden" name="{{this}}" value="{{getProperty @root.request.params.query this}}" />
           {{/if ~}}
