--- a/sites/configurations/fundingscotland/partials/funder-search-filters.hbs
+++ b/sites/configurations/fundingscotland/partials/funder-search-filters.hbs
@@ -5,7 +5,7 @@
       <div class="mdc-text-field mdc-text-field--box mdc-text-field--with-leading-icon" data-mdc-auto-init="MDCTextField">
         <span class="far fa-search mdc-text-field__icon" tabindex="0" role="button"></span>
         <input type="text" id="{{instance_id}}-keywords" name="keywords" class="mdc-text-field__input mdc-text-field--fullwidth" value="{{@root.request.params.query.keywords}}">
-        <label class="mdc-floating-label mdc-floating-label--float-above" for="keywords">
+        <label class="mdc-floating-label" for="keywords">
           Funder name
         </label>
         <div class="mdc-line-ripple"></div>
