--- a/sites/configurations/fundingscotland/partials/fund-search-header.hbs
+++ b/sites/configurations/fundingscotland/partials/fund-search-header.hbs
@@ -2,6 +2,18 @@
   <div class="content page-content">
     {{#if @root.data.auth ~}}
       <form id="search-view" class="search-form mdc-elevation--z5" action="/search" method="GET">
+        {{#each (split "activities,beneficiaries,geographical_areas_funded,fund_status,charities_only,type_of_cost,type_of_funding" ",")}}
+          {{#if (getProperty @root.request.params.query this) ~}}
+            {{#each (arrayify (getProperty @root.request.params.query this)) ~}}
+              <input type="hidden" name="{{../this}}[]" value="{{this}}" />
+            {{/each ~}}
+          {{/if ~}}
+        {{/each ~}}
+        {{#each (split "sort" ",")}}
+          {{#if (getProperty @root.request.params.query this) ~}}
+            <input type="hidden" name="{{this}}" value="{{getProperty @root.request.params.query this}}" />
+          {{/if ~}}
+        {{/each ~}}
         <div class="mdc-layout-grid">
           <div class="mdc-layout-grid__inner">
             <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-10-desktop mdc-layout-grid__cell--span-7-tablet mdc-layout-grid__cell--span-4-phone">
