--- a/sites/configurations/goodmoves/partials/organisation-search-form.hbs
+++ b/sites/configurations/goodmoves/partials/organisation-search-form.hbs
@@ -4,7 +4,7 @@
     <div class="h-padding">
       <div class="mdc-text-field mdc-text-field--box mdc-text-field--with-leading-icon mdc-drawer--occasional-ie11" data-mdc-auto-init="MDCTextField">
         <span class="far fa-search mdc-text-field__icon" tabindex="0" role="button"></span>
-        <input type="text" id="{{instance_id}}-keywords" name="keywords" class="mdc-text-field__input mdc-text-field--fullwidth" value="{{ @root.request.params.query.keywords}}">
+        <input type="text" id="{{instance_id}}-keywords" name="keywords" class="mdc-text-field__input mdc-text-field--fullwidth">
         <label class="mdc-floating-label mdc-floating-label--float-above" for="keywords">
           Organisation name
         </label>
