--- a/sites/configurations/fundingscotland/partials/funder-search-results.hbs
+++ b/sites/configurations/fundingscotland/partials/funder-search-results.hbs
@@ -14,7 +14,7 @@
 
 <div class="mdc-layout-grid">
   <div class="mdc-layout-grid__inner">
-    {{#each @root.data.search_.data.detailed_results.hits.hits ~}}
+    {{#each @root.data.search_data.detailed_results.hits.hits ~}}
     <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
       {{> funder_search_result _source}}
     </div>
@@ -23,5 +23,5 @@
 </div>
 
 <div class="foot">
-  {{> pagination paging=@root.data.search_.data.detailed_results.pagination}}
+  {{> pagination paging=@root.data.search_data.detailed_results.pagination}}
 </div>
