--- a/sites/configurations/fundingscotland/partials/funder/search-result.hbs
+++ b/sites/configurations/fundingscotland/partials/funder/search-result.hbs
@@ -1,28 +1,25 @@
 <div class="mdc-card search-result" data-funder-id="{{Id}}">
   <div class="mdc-card__info--funder-row">
     <div class="mdc-card__info--funder">
+      {{#if has_logo ~}}
+      <div class="mdc-card__media mdc-card__media--funder">
+        <a href="/funder/{{slug}}{{@root.request.url.search}}">
+          <img src="{{logo_url}}" alt="{{title}}" />
+        </a>
+      </div>
+      {{/if ~}}
       <div class="mdc-card__info--funder-title mdc-typography--headline6">
         <a href="/funder/{{slug}}{{@root.request.url.search}}">{{title}}</a>
       </div>
+      <div class="search-result-article__snippet mdc-typography--body1">
+        {{{og_summary}}}
+      </div>
     </div>
-    {{#if has_logo ~}}
-    <div class="mdc-card__media mdc-card__media--square mdc-card__media--funder">
-      <a href="/funder/{{slug}}{{@root.request.url.search}}">
-        <img src="{{logo_url}}" alt="{{title}}" />
-      </a>
-    </div>
-    {{/if ~}}
   </div>
-  <hr class="mdc-list-divider" />
-  {{#if description ~}}
-  <div class="search-result-article__snippet mdc-typography--body1">
-    {{{description}}}
-  </div>
-  <hr class="mdc-list-divider" />
-  {{/if}}
   <div class="mdc-card__actions">
     <div class="mdc-card__action-buttons demo-card__action-buttons--text-only mdc-card__actions--full-bleed">
-      <a href="/funder/{{slug}}{{@root.request.url.search}}" class="mdc-card__action">Find out more</a>
+      <a href="/funder/{{slug}}{{@root.request.url.search}}" class="mdc-card__action hide-sm">Find out more</a>
+      <a href="/funder/{{slug}}{{@root.request.url.search}}" class="mdc-card__action hide-md hide-lg"><span class="fal fa-info-circle fa-fw fa-2x" aria-hidden="true"></span></a>
     </div>
   </div>
 </div>
