--- a/sites/configurations/fundingscotland/partials/funder-search-results.hbs
+++ b/sites/configurations/fundingscotland/partials/funder-search-results.hbs
@@ -12,7 +12,7 @@
   </div>
 </div>
 
-<div class="mdc-layout-grid">
+<div class="mdc-layout-grid equal-height">
   <div class="mdc-layout-grid__inner">
     {{#each @root.data.search_data.detailed_results.hits.hits ~}}
     <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
