--- a/sites/configurations/fundingscotland/templates/funds/browse.hbs
+++ b/sites/configurations/fundingscotland/templates/funds/browse.hbs
@@ -1,48 +1,31 @@
 {{#if @root.data.auth ~}}
-<div class="container-fluid">
-  <div class="mdc-layout-grid home-funds">
-    <div class="mdc-layout-grid__inner">
-      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone content page-content">
-        <div class="browse-title mdc-typography--headline5">
-          Activities
-        </div>
-        <ul class="mdc-list">
-          {{#each data.supplimentaryResponses.types.aggregations.activities_slugs.buckets ~}}
-          <a class="mdc-list-item" href="/browse/activities/{{urlencode key}}" role="menuitem">
-            <span class="mdc-list-item__text">
-              {{#with (lookup ../data.supplimentaryResponses.types.aggregations.activities.buckets @index) ~}}
-              {{{key}}}
-              {{/with ~}}
-            </span>
-            <span class="mdc-list-item__meta">
-              {{doc_count}}
-            </span>
-          </a>
-          {{/each ~}}
-        </ul>
-      </div>
-      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone content page-content">
-        <div class="browse-title mdc-typography--headline5">
-          Beneficiaries
-        </div>
-        <ul class="mdc-list">
-          {{#each data.supplimentaryResponses.types.aggregations.beneficiaries_slugs.buckets ~}}
-          <a class="mdc-list-item" href="/browse/beneficiaries/{{urlencode key}}" role="menuitem">
-            <span class="mdc-list-item__text">
-              {{#with (lookup ../data.supplimentaryResponses.types.aggregations.beneficiaries.buckets @index) ~}}
-              {{{key}}}
-              {{/with ~}}
-            </span>
-            <span class="mdc-list-item__meta">
-              {{doc_count}}
-            </span>
-          </a>
-          {{/each ~}}
-        </ul>
+  <div class="container-fluid">
+    <div class="mdc-layout-grid container-content">
+      <div class="mdc-layout-grid__inner">
+        {{#each (split "activities,beneficiaries,geographical_areas_funded" ",")}}
+          <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone content page-content">
+            <div class="browse-title mdc-typography--headline5">
+              {{getProperty @root.context.metaData.termTypeLabels (concat this ".plural")}}
+            </div>
+            <ul class="mdc-list">
+              {{#each (getProperty @root.data.supplimentaryResponses.types.aggregations (concat this "_slugs.buckets")) ~}}
+              <a class="mdc-list-item" href="/search?{{../this}}={{urlencode key}}" role="menuitem">
+                <span class="mdc-list-item__text">
+                  {{#with (lookup (getProperty @root.data.supplimentaryResponses.types.aggregations (concat ../this ".buckets")) @index) ~}}
+                    {{{key}}}
+                  {{/with ~}}
+                </span>
+                <span class="mdc-list-item__meta">
+                  {{doc_count}}
+                </span>
+              </a>
+              {{/each ~}}
+            </ul>
+          </div>
+        {{/each ~}}
       </div>
     </div>
   </div>
-</div>
 {{else}}
-{{> account_redirect_home}}
+  {{> account_redirect_home}}
 {{/if ~}}
