--- a/assets/css/fundingscotland-styles.scss
+++ b/assets/css/fundingscotland-styles.scss
@@ -1651,13 +1651,16 @@ footer,
         color: $mdc-theme-primary;
       }
     }
+    .mdc-list-item {
+      .mdc-list-item__meta {
+        text-decoration: none;
+        white-space: nowrap;
+      }
+    }
     .mdc-list-item:hover {
       text-decoration: none;
       .mdc-list-item__text {
         text-decoration: underline;
-      }
-      .mdc-list-item__meta {
-        text-decoration: none;
       }
     }
     .mdc-list-item:hover::before,
