--- a/sites/configurations/fundingscotland/templates/funds/fund-foot.hbs
+++ b/sites/configurations/fundingscotland/templates/funds/fund-foot.hbs
@@ -1,22 +1,16 @@
 <script>
-var tabs = new mdc.tabs.MDCTabBar(document.querySelector("#fund-tab-bar"));
-var panels = document.querySelector(".panels");
-tabs.preventDefaultOnClick = true;
-function updatePanel(index) {
-  var activePanel = panels.querySelector(".panel.panel--active");
-  if (activePanel) {
-    activePanel.classList.remove("panel--active");
-  }
-  var newActivePanel = panels.querySelector(
-    ".panel:nth-child(" + (index + 1) + ")"
-  );
-  if (newActivePanel) {
-    newActivePanel.classList.add("panel--active");
-  }
-}
-tabs.listen("MDCTabBar:change", function(t) {
-  var tabs = t.detail;
-  var nthChildIndex = tabs.activeTabIndex;
-  updatePanel(nthChildIndex);
+{{#if data.auth}}
+var mdeEditors = [];
+$(document).ready(function() {
+  $('textarea[data-simple-mde]').each(function(i, o) {
+    var mdeEditor = new SimpleMDE({
+      element: o,
+      forceSync: true,
+      toolbar: ["heading-1", "heading-2", "bold", "italic", "|", "unordered-list", "ordered-list", "link"]
+    });
+    o.mde = mdeEditor;
+    mdeEditors.push(mdeEditor);
+  });
 });
+{{/if}}
 </script>
