--- a/assets/css/fundingscotland-styles.scss
+++ b/assets/css/fundingscotland-styles.scss
@@ -976,6 +976,12 @@ dl {
   .mdc-card__info--funder-title {
     margin: 0 0 $unit/2;
   }
+  dl {
+    dt {
+      min-width: 130px;
+      margin-right: $unit;
+    }
+  }
   .mdc-card__info--fund .detailed-info,
   .funder-type {
     margin: $unit/2 0 $unit;
