--- a/sites/configurations/fundingscotland/partials/fund/full.hbs
+++ b/sites/configurations/fundingscotland/partials/fund/full.hbs
@@ -1,22 +1,5 @@
 <div class="mdc-card full" data-fund-id="{{Id}}">
-  {{#if funder_organisation.has_logo ~}}
-  <div class="mdc-card__media mdc-card__media--funder pull-right hide-sm">
-    <a href="/funder/{{funder_organisation.slug}}{{@root.request.url.search}}">
-      <img src="{{funder_organisation.logo_url}}" alt="{{funder_organisation.name}}" />
-    </a>
-  </div>
-  {{/if ~}}
-  <h2 class="mdc-card__info--fund-title mdc-typography--headline5">
-    <a href="/fund/{{slug}}{{@root.request.url.search}}">
-      <span class="hover-underline">{{title}}</span>
-    </a>
-  </h2>
-  <ul class="fa-ul funder">
-    <li class="mdc-card__info--fund-funder mdc-typography--body1">
-      <span class="fa-li"><span class="far fa-building fa-fw" title="Funder"></span></span>
-      <a href="/funder/{{funder_organisation.slug}}{{@root.request.url.search}}">{{funder_organisation.name}}</a>
-    </li>
-  </ul>
+  {{> fund_key_info}}
   <ul class="fa-ul first">
     {{#if (length (arrayify geographical_areas_funded)) ~}}
       <li class="mdc-typography--body1 mdc-chip-set">
