--- a/sites/configurations/emailer/layouts/default.hbs
+++ b/sites/configurations/emailer/layouts/default.hbs
@@ -1,17 +1,129 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-    <meta charset="UTF-8">
-    <title>{{route.metaData.title}}</title>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
-    {{{layoutParts.head}}}
+  <meta charset="UTF-8">
+  <title>{{route.metaData.title}}</title>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+  <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.cyan-light_blue.min.css">
+  <link rel="stylesheet" href="/assets/css/emailer.css">
+  <style>
+    .container-fluid {
+      max-width: 1024px;
+      padding: 15px;
+      margin: 0 auto;
+    }
+  </style>
+  {{{layoutParts.head}}}
+  <script>
+  {{#ifAny request.params.query.debug (compare request.url.hostname "emailer.local") ~}}
+  console.log('#### DEBUG MODE ON ####');
+  console.log('Request:', {{{regexReplace (regexReplace (stringify request) "(<\/script)" "gi" '</scr\" + \"ipt') "(\r|\n)" "gi" ""}}});
+  console.log('Route:', {{{regexReplace (regexReplace (stringify route) "(<\/script)" "gi" '</scr\" + \"ipt') "(\r|\n)" "gi" ""}}});
+  console.log('Data:', {{{regexReplace (regexReplace (stringify data) "(<\/script)" "gi" '</scr\" + \"ipt') "(\r|\n)" "gi" ""}}});
+  console.log('Menus:', {{{regexReplace (regexReplace (stringify @root.context.metaData.menus) "(<\/script)" "gi" '</scr\" + \"ipt') "(\r|\n)" "gi" ""}}});
+  {{#if errors.[0]}}
+    console.error('Task Errors:', {{{regexReplace (regexReplace (stringify errors) "(<\/script)" "gi" '</scr\" + \"ipt') "(\r|\n)" "gi" ""}}});
+  {{/if}}
+  {{/ifAny ~}}
+  </script>
 </head>
+
 <body>
-    <div class="container-fluid">
+  <div class="mdl-layout__container">
+    <div class="mdl-layout mdl-js-layout mdl-layout--fixed-drawer">
+      <header class="demo-header mdl-layout__header mdl-color--grey-100 mdl-color-text--grey-600 is-casting-shadow">
+        <div aria-expanded="false" role="button" tabindex="0" class="mdl-layout__drawer-button"><i class="material-icons"></i></div>
+        <div class="mdl-layout__header-row">
+          <span class="mdl-layout-title">{{default route.metaData.title ""}}</span>
+          {{#if @root.data.auth.email}}
+          <div class="mdl-layout-spacer"></div>
+          <div class="mdl-textfield mdl-js-textfield mdl-textfield--expandable">
+            <label class="mdl-button mdl-js-button mdl-button--icon" for="search">
+              <i class="material-icons">search</i>
+            </label>
+            <div class="mdl-textfield__expandable-holder">
+              <input class="mdl-textfield__input" type="text" id="search">
+              <label class="mdl-textfield__label" for="search">Enter your query...</label>
+            </div>
+          </div>
+          {{/if}}
+        </div>
+      </header>
+
+      <div class="demo-drawer mdl-layout__drawer mdl-color--blue-grey-900 mdl-color-text--blue-grey-50"
+        aria-hidden="true">
+        <header class="demo-drawer-header">
+          <img src="{{default @root.data.auth.photoURL (concat 'https://ui-avatars.com/api/?rounded=true&name=' @root.data.auth.displayName)}}" class="demo-avatar">
+          <div class="demo-avatar-dropdown">
+            <span>{{default @root.data.auth.displayName (default @root.data.auth.email "Not logged in")}}</span>
+            <div class="mdl-layout-spacer"></div>
+            {{#if @root.data.auth.email}}
+              <button id="accbtn" class="mdl-button mdl-js-button mdl-js-ripple-effect mdl-button--icon">
+                <i class="material-icons" role="presentation">arrow_drop_down</i>
+                <span class="visuallyhidden">Accounts</span>
+              </button>
+              <ul class="mdl-menu mdl-menu--bottom-right mdl-js-menu mdl-js-ripple-effect mdl-js-ripple-effect--ignore-events" for="accbtn">
+                <li class="mdl-menu__item mdl-js-ripple-effect" tabindex="-1">
+                  Change password 
+                </li>
+                <li class="mdl-menu__item mdl-js-ripple-effect" tabindex="-1">
+                  <a href="/logout">
+                    Logout
+                  </a>
+                </li>
+              </ul>
+            {{/if}}
+          </div>
+        </header>
+        <nav class="demo-navigation mdl-navigation mdl-color--blue-grey-800">
+          {{#if @root.data.auth.email}}
+          <a class="mdl-navigation__link" href=""><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">show_chart</i>Status</a>
+          <a class="mdl-navigation__link" href=""><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">people</i>Subscribers</a>
+          {{/if}}
+          <div class="mdl-layout-spacer"></div>
+        </nav>
+      </div>
+
+      <main class="mdl-layout__content mdl-color--grey-100">
         {{{layoutParts.body}}}
+      </main>
     </div>
-    <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
-    {{{layoutParts.foot}}}
+  </div>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/5.3.0/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/5.3.0/firebase-auth.js"></script>
+  <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
+  <script>
+    firebase.initializeApp({
+      apiKey: "AIzaSyDIUNnyGeZY3sO8gGIf-_2dgO49xKij5zI",
+      authDomain: "scvo-net.firebaseapp.com",
+      databaseURL: "https://scvo-net.firebaseio.com",
+      projectId: "scvo-net",
+      storageBucket: "scvo-net.appspot.com",
+      messagingSenderId: "782194712584"
+    });
+
+    function setCookie(name, value, days) {
+      var expires = "";
+      if (days) {
+        var date = new Date();
+        date.setTime(date.getTime() + (days*24*60*60*1000));
+        expires = "; expires=" + date.toUTCString();
+      }
+      document.cookie = name + "=" + (value || "")  + expires + "; path=/; secure";
+    }
+
+    function disable(elements, disable) {
+      disable = typeof disable === 'undefined' ? true : disable;
+      for (var e = 0; e < elements.length; ++e) {
+        var element = elements[e];
+        var opacity = disable ? 0.5 : 1;
+        $(element).prop('disabled', disable).css('opacity', opacity);
+      }
+    }
+  </script>
+  {{{layoutParts.foot}}}
 </body>
+
 </html>
