Theme changed to FS current colours

--- a/assets/css/fundingscotland-styles.scss
+++ b/assets/css/fundingscotland-styles.scss
@@ -1,6 +1,6 @@
-$mdc-theme-primary: #00796A;
-$mdc-theme-primary-light: #198678;
-$mdc-theme-primary-dark: #00796A;
+$mdc-theme-primary: #2E8316;
+$mdc-theme-primary-light: #6CC439;
+$mdc-theme-primary-dark: #1E590D;
 
 $mdc-theme-complimentary: #c6dabf;
 $mdc-theme-complimentary-light: #ecf2e9;
@@ -144,7 +144,7 @@ header {
       height: $header-lower-height;
     }
     .mdc-top-app-bar__lower .mdc-top-app-bar__section--align-start {
-      background-image: linear-gradient(60deg, #328c19, #328c19 220px, #6CC439 221px, $mdc-theme-primary);
+      background-image: linear-gradient(60deg, $mdc-theme-primary, $mdc-theme-primary 220px, $mdc-theme-primary-light 221px, $mdc-theme-primary);
     }
     .mdc-top-app-bar__lower .mdc-top-app-bar__section--align-end {
       background-color: $mdc-theme-primary;
