FS colour alteration

--- a/assets/css/fundingscotland-styles.scss
+++ b/assets/css/fundingscotland-styles.scss
@@ -1,6 +1,6 @@
-$mdc-theme-primary: #2E8316;
+$mdc-theme-primary: #178737;
 $mdc-theme-primary-light: #6CC439;
-$mdc-theme-primary-dark: #1E590D;
+$mdc-theme-primary-dark: #0E5D24;
 
 $mdc-theme-complimentary: #c6dabf;
 $mdc-theme-complimentary-light: #ecf2e9;
