--- a/assets/css/fundingscotland-styles.scss
+++ b/assets/css/fundingscotland-styles.scss
@@ -1553,26 +1553,9 @@ body {
   .header.mdc-text-field--box:not(.mdc-text-field--disabled) {
     background-color: transparent;
   }
-  .mdc-floating-label {
-    transform: translateY(-50%) scale(0.75);
-  }
-  .geo-lookup {
-    color: $mdc-theme-primary !important;
-  }
-  .geo-lookup:hover {
-    font-weight: 600;
-    color: $mdc-theme-primary-dark !important;
-    cursor: pointer;
-  }
-  .geo-lookup:focus {
-    outline: none;
-  }
-  .search-distance {
-    font-variant: all-small-caps;
-    font-size: 0.9rem;
-    font-weight: 600;
-    color: rgba(0, 0, 0, 0.7);
-  }
+  // .mdc-floating-label {
+  //   transform: translateY(-50%) scale(0.75);
+  // }
 }
 
 /* End Search results card */
